WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183973
Fix the build with no pasteboard
https://bugs.webkit.org/show_bug.cgi?id=183973
Summary
Fix the build with no pasteboard
Tim Horton
Reported
2018-03-23 22:33:25 PDT
Fix the build with no pasteboard
Attachments
Patch
(15.56 KB, patch)
2018-03-23 22:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(15.51 KB, patch)
2018-03-23 22:50 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-03-23 22:33:47 PDT
Created
attachment 336460
[details]
Patch
mitz
Comment 2
2018-03-23 22:39:12 PDT
Comment on
attachment 336460
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336460&action=review
> Source/WebKitLegacy/mac/WebView/WebView.mm:1943 > +#else // ENABLE(DRAG_SUPPORT)
I doubt that the comment is helpful.
> Source/WebKitLegacy/mac/WebView/WebView.mm:2012 > +#endif // !ENABLE(DRAG_SUPPORT)
Ditto.
Tim Horton
Comment 3
2018-03-23 22:50:31 PDT
Created
attachment 336463
[details]
Patch
Tim Horton
Comment 4
2018-03-23 22:58:00 PDT
https://trac.webkit.org/r229943
Radar WebKit Bug Importer
Comment 5
2018-03-23 22:58:16 PDT
<
rdar://problem/38820296
>
Radar WebKit Bug Importer
Comment 6
2018-03-23 22:58:20 PDT
<
rdar://problem/38820298
>
Wenson Hsieh
Comment 7
2018-03-24 01:13:31 PDT
This appears to have broken the watchOS build, wherein ENABLE_DRAG_SUPPORT is 0 and UIDropSession is not defined. Should we change the #else to #elif __IPHONE_OS_VERSION_MIN_REQUIRED >= 110000?
Tim Horton
Comment 8
2018-03-24 01:14:30 PDT
(In reply to Wenson Hsieh from
comment #7
)
> This appears to have broken the watchOS build, wherein ENABLE_DRAG_SUPPORT > is 0 and UIDropSession is not defined. > > Should we change the #else to #elif __IPHONE_OS_VERSION_MIN_REQUIRED >= > 110000?
Yes! Will do.
Tim Horton
Comment 9
2018-03-24 01:17:25 PDT
Did that in
https://trac.webkit.org/changeset/229947/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug