Fix the build with no pasteboard https://bugs.webkit.org/show_bug.cgi?id=183973

Reviewed by Dan Bernstein.

* .../Configurations/FeatureDefines.xcconfig:
* WebView/WebView.mm:
(-[WebView _requestStartDataInteraction:globalPosition:]):
(-[WebView _getDataInteractionData]):
(-[WebView _dataOperationTextIndicator]):
(-[WebView _dragSourceAction]):
(-[WebView _draggedLinkTitle]):
(-[WebView _draggedLinkURL]):
(-[WebView _draggedElementBounds]):
(-[WebView _enteredDataInteraction:client:global:operation:]):
(-[WebView _updatedDataInteraction:client:global:operation:]):
(-[WebView _exitedDataInteraction:client:global:operation:]):
(-[WebView _performDataInteraction:client:global:operation:]):
(-[WebView _tryToPerformDataInteraction:client:global:operation:]):
(-[WebView _endedDataInteraction:global:]):
(-[WebView _dataInteractionCaretRect]):
* WebView/WebViewPrivate.h:


Canonical link: https://commits.webkit.org/199575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229943 268f45cc-cd09-0410-ab3c-d52691b4dbfc